Remove legacy dependencies
- Add explicit grpc and protobuf dependencies.
- Move aai-schema dependency to parent pom.
- Remove the following dependencies and replace with standard Java:
  - commons-io
  - guava
  - org.json (replaced with gson)

Issue-ID: POLICY-5592
Change-Id: I6bd7bf5b2397e4dc994d622e67c344a02895a5a3
Signed-off-by: danielhanrahan <daniel.hanrahan@est.tech>